syntax = "proto3";
package discovery;
import "common.proto";

option java_package = "org.apache.hugegraph.pd.grpc.discovery";
option java_multiple_files = true;


service DiscoveryService {
  rpc register(NodeInfo) returns (RegisterInfo);
  rpc getNodes(Query) returns (NodeInfos);
//  rpc getNodesByLabel(Conditions) returns (NodeInfos);
}

/* requests */
message NodeInfo {
  string id = 1;
  string appName = 2;
  string version = 3;
  string address = 4;
  int64 interval = 5;
  map<string,string> labels = 6;
}
message Query {
  string appName = 1;
  string version = 2;
  map<string,string> labels = 3;
}
message LeaseInfo {
  int64 registrationTs = 1;
  int64 lastHeartbeatTs = 2;
  int64 serverUpTs = 3;
}
message RegisterInfo {
    NodeInfo nodeInfo = 1;
    LeaseInfo leaseInfo = 2 ;
    RegisterType type = 3 ;
    ResponseHeader header = 4;
}
enum RegisterType {
    Register = 0;
    Heartbeat = 1;
    Dislodge = 2;
}
//message Condition{
//  string label = 1;
//}
//message Conditions{
//  string label = 1;
//  string value = 2;
//}
message NodeInfos{
 repeated NodeInfo info = 1;
}